--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Node Server Testing Challenge",
   "scripts": {
-    "test": "jest --watch"
+    "server": "nodemon index.js",
+    "test": "jest --watchAll --verbose"
   },
   "jest": {
     "testEnvironment": "node"
@@ -16,9 +17,12 @@
   "devDependencies": {
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
     "supertest": "^6.0.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "helmet": "^4.5.0"
   }
 }
